--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aliyun-sdk": "^1.1.0",
     "async": "^0.9.0",
     "chalk": "^0.5.1",
+    "commander": "^2.6.0",
     "debug": "^2.1.0",
     "mime": "^1.2.11",
     "ncp": "^1.0.1",
