--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "oss-sync",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Aliyun OSS sync tool",
   "main": "sync.js",
   "author": "mehwww",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mehwww/oss-sync"
+  },
+  "bin": {
+    "osync": "./bin/osync.js"
+  },
   "dependencies": {
     "aliyun-sdk": "^1.1.0",
     "async": "^0.9.0",
