--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "aliyun-sdk": "^1.2.1",
-    "async": "^0.9.0",
+    "bluebird": "^2.6.4",
     "chalk": "^0.5.1",
     "commander": "^2.6.0",
     "debug": "^2.1.0",
