--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chalk": "^0.5.1",
     "commander": "^2.6.0",
     "debug": "^2.1.0",
-    "humanize": "0.0.9",
+    "filesize": "^3.0.1",
     "mime": "^1.2.11",
     "ncp": "^1.0.1",
     "rimraf": "^2.2.8"
