--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "osync": "./bin/osync.js"
   },
   "dependencies": {
-    "aliyun-sdk": "^1.5.6",
-    "bluebird": "^2.9.34",
-    "chalk": "^1.1.0",
-    "commander": "^2.8.1",
+    "aliyun-sdk": "^1.8.2",
+    "bluebird": "^3.2.1",
+    "chalk": "^1.1.1",
+    "commander": "^2.9.0",
     "debug": "^2.2.0",
-    "filesize": "^3.1.3",
+    "filesize": "^3.2.1",
     "mime": "^1.3.4",
     "ncp": "^2.0.0",
     "progress": "^1.1.8",
-    "rimraf": "^2.4.2"
+    "rimraf": "^2.5.1",
+    "wcwidth": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-fs": "^0.1.0"
   }
 }
