--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-fs": "^0.1.0"
+    "chai-fs": "^0.1.0",
+    "eslint": "^2.2.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
