--- a/package.json
+++ b/package.json
@@ -22,16 +22,14 @@
   },
   "dependencies": {
     "aliyun-sdk": "^1.8.2",
-    "bluebird": "^3.2.1",
+    "bluebird": "^3.3.1",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
-    "debug": "^2.2.0",
     "filesize": "^3.2.1",
     "mime": "^1.3.4",
     "ncp": "^2.0.0",
-    "progress": "^1.1.8",
-    "rimraf": "^2.5.1",
-    "wcwidth": "^1.0.0"
+    "rimraf": "^2.5.2",
+    "throat": "^2.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
