--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-datetime": "^1.4.1",
     "chai-fs": "^0.1.0",
     "eslint": "^2.2.0",
     "eslint-config-standard": "^5.1.0",
